kanc/src/tests/sample_code/should_fail/single_file/ast_simplification/labeled_params/underscore_label/explicit_underscore_label.k
type Nat {
    .o: Nat,
    .s(n: Nat): Nat,
}

let f = fun _(_~x: Nat): Nat {
    Nat.o
};
